# tech19_test

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  QUICK_START_WINDOWS.md  README.md  Tech19_C++_Embedded_Homework_Assignment_Version_B.txt  build_windows.sh
client/: CMakeLists.txt  test_client.cpp
docs/: ARCHITECTURE.md  BUILD.md  COMMITS.md  DEVELOPMENT_PLAN.md  PRODUCTION.md
include/: business_logic.h  crc16.h  network_listener.h  parser.h  platform_compat.h  protocol.h  serialization.h  thread_safe_queue.h
src/: business_logic.cpp  crc16.cpp  main.cpp  network_listener.cpp  parser.cpp  serialization.cpp
tests/: CMakeLists.txt  test_main.cpp
